--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         // Ensure Browserify has loaded the modules
         const submitIdentifier = window.submitIdentifier
         const eventManager = window.eventManager
-        const identifier  = "final-test-with-amar";
+        const identifier  = "Final_Dmp_Test";
         submitIdentifier(identifier);
         (async () => {
                 let previoussummary = await eventSummary(identifier);
