--- a/guest_comment.html
+++ b/guest_comment.html
@@ -113,7 +113,7 @@
         }
         console.log("here data sent",data);
 
-        fetch("https://api.demo.dhiway.com/api/v1/dmp/witness", {
+        fetch("http://localhost:3002/api/v1/dmp/witness", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
@@ -125,7 +125,7 @@
             // if (!response.ok) {
             //   throw new Error("Network response was not ok")
             // }
-            alert("Inaugrated sent successfully!")
+            alert("Inaugrated successfully!")
             // form.reset() // Reset the form after successful submission
           })
           .catch((error) => {
