--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         style="font-family: 'Samaan'"
         class="eventHeading"
       >
-        C4GT Inauguration
+        DMP Inauguration
       </h1>
       <div class="inaugrationscreen" id="inaugrationscreen">
     
