--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         // Ensure Browserify has loaded the modules
         const submitIdentifier = window.submitIdentifier
         const eventManager = window.eventManager
-        const identifier  = "dry_run_test_x1";
+        const identifier  = "dry_run_test_dmp_inuag_2024";
         submitIdentifier(identifier);
         (async () => {
                 let previoussummary = await eventSummary(identifier);
