fix: changes index

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="diya.css" />
-    <title>C4GT Inaugration</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <title>DMP Inaugration</title>
     <style>
       @font-face {
         font-family: "Samaan";
@@ -13,6 +14,8 @@
     </style>
   </head>
   <body>
+    <div class="headclss">
+    <img src="/c4gtlogo.jpg" class="logoclass"/>
       <h1
         id="updateEventCreateDiv"
         style="font-family: 'Samaan'"
@@ -20,6 +23,7 @@
       >
         DMP Inauguration
       </h1>
+    </div>
       <div class="inaugrationscreen" id="inaugrationscreen">
     
     <br />
@@ -116,11 +120,13 @@
     </div>
     <div class="messagesdiv">
       <div class="message" id="message1">
-        
+        asdasdasd
       </div>
       <div class="message" id="message2">
+        asdasdads
       </div>
       <div class="message"  id="message3">
+        asdasdas
       </div>
      </div>
   </div>
@@ -155,7 +161,7 @@
         // Ensure Browserify has loaded the modules
         const submitIdentifier = window.submitIdentifier
         const eventManager = window.eventManager
-        const identifier  = "Final_Dmp_Dry_Run";
+        const identifier  = "dry_run_test_dmp_inuag_2024";
         submitIdentifier(identifier);
         (async () => {
                 let previoussummary = await eventSummary(identifier);
