--- a/guest_comment.html
+++ b/guest_comment.html
@@ -143,7 +143,7 @@
         }
         console.log("here data sent",data);
 
-        fetch("http://localhost:3002/api/v1/dmp/witness", {
+        fetch("https://api.demo.dhiway.com/api/v1/dmp/witness", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
