--- a/guest_invite.html
+++ b/guest_invite.html
@@ -226,7 +226,7 @@
           witnessCount: 3,
         }
 
-        fetch("http://localhost:3002/api/v1/dmp/create", {
+        fetch("https://api.demo.dhiway.com/api/v1/dmp/create", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
@@ -278,7 +278,7 @@
           identifier: formDatamain.get("identifier"),
         }
 
-        fetch("http://localhost:3002/api/v1/dmp/sendMail", {
+        fetch("https://api.demo.dhiway.com/api/v1/dmp/sendMail", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
