fix: ui changes

--- a/guest_comment.html
+++ b/guest_comment.html
@@ -158,9 +158,9 @@
             alert("Inaugrated successfully!")
             const mainscreen= document.getElementById("mainscreen");
             const successscreen = document.getElementById("successscreen");
-            if (successscreen.classList.contains("hidden")) {
-              successscreen.classList.remove("hidden");
-              mainscreen.classList.add("hidden");
+            if (successscreen.classList.contains("hide")) {
+              successscreen.classList.remove("hide");
+              mainscreen.classList.add("hide");
               }
             // form.reset() // Reset the form after successful submission
           })
