--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="headclss">
-    <img src="c4gtlogo.jpg" class="logoclass"/>
+    <img src="c4gtlogo.png" class="logoclass"/>
       <h1
         id="updateEventCreateDiv"
         style="font-family: 'Samaan'"
