fix: screen update

--- a/guest_comment.html
+++ b/guest_comment.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <section class="hide" id="mainscreen">
+    <section class="" id="mainscreen">
       <div class="swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
@@ -58,7 +58,7 @@
         </div>
       </div>
     </section>
-    <div class="successscreen" id="successscreen">
+    <div class="successscreen hide" id="successscreen">
       <div class="container">
         <div class="diya">
           <div class="diya__base base">
