fix: update message

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
     <br />
     <div class='hide' id="eventopen">
-    <h1 class="eventHeading2" > The Event is now Open</h1>
+    <h1 class="eventHeading2" >DMP 2024 is now open!</h1>
   </div>
     <div class="maindivcont">
 
