fix: spelling change

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   </div>
   <div class="eventdivright ">
     <div class="cardcontaincord">
-         <div class="headercord">CORD Blockcain</div>  
+         <div class="headercord">CORD Blockchain</div>  
          <div class="cordevents">
     <div class="eventcard1 " id="create"> <div class="eventCreate" ><pre id="eventCreate"></pre></div>
   </div>
