--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         // Ensure Browserify has loaded the modules
         const submitIdentifier = window.submitIdentifier
         const eventManager = window.eventManager
-        const identifier  = "DMP_2024_Inauguration_Test_Screenshots";
+        const identifier  = "C4GT DMP 2024 Inauguration";
         submitIdentifier(identifier);
         (async () => {
                 let previoussummary = await eventSummary(identifier);
